Add stopwords pkg

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Imports:
     rvest,
     stringr,
     wordcloud2,
-    kaggler (>= 0.0.0.9000)
-Remotes:  
+    kaggler (>= 0.0.0.9000),
+    stopwords
+Remotes: 
     ldurazo/kaggler
