--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ Imports:
     rvest,
     stringr,
     wordcloud2,
-    kaggler (>= 0.0.0.9000),
-    stopwords
+    kaggler (>= 0.0.0.9000)
 Remotes: 
     ldurazo/kaggler
