--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.1.2.9000
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
@@ -26,3 +28,4 @@ Imports:
     kaggler (>= 0.0.0.9000)
 Remotes: 
     ldurazo/kaggler
+VignetteBuilder: knitr
