--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.17.1.1
+pandoc: '2.17'
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   Intro_to_rlyrics: Intro_to_rlyrics.html
-last_built: 2022-02-03T08:36Z
+last_built: 2022-02-03T22:25Z
 
